Tail recursion and combinators
Signed-off-by: i1i1 <vanyarybin1@live.ru>

--- a/package.yaml
+++ b/package.yaml
@@ -1,4 +1,4 @@
-name:                lsystem
+name:                l-system
 version:             0.1.0.0
 github:              "i1i1/lsystem"
 license:             BSD3
@@ -27,19 +27,8 @@ dependencies:
 library:
   source-dirs: src
 
-executables:
-  lsystem-exe:
-    main:                Main.hs
-    source-dirs:         app
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - lsystem
-
 tests:
-  lsystem-test:
+  l-system-test:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
@@ -47,4 +36,4 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - lsystem
+    - l-system
