--- a/l-system.cabal
+++ b/l-system.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 
-name:           lsystem
+name:           l-system
 version:        0.1.0.0
 description:    Please see the README on GitHub at <https://github.com/githubuser/lsystem#readme>
 homepage:       https://github.com/i1i1/lsystem#readme
@@ -26,10 +26,10 @@ source-repository head
 library
   exposed-modules:
       Draw
+      Graphics.LSystem
       L
-      Lib
   other-modules:
-      Paths_lsystem
+      Paths_l_system
   hs-source-dirs:
       src
   build-depends:
@@ -38,31 +38,17 @@ library
     , text
   default-language: Haskell2010
 
-executable lsystem-exe
-  main-is: Main.hs
-  other-modules:
-      Paths_lsystem
-  hs-source-dirs:
-      app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      base >=4.7 && <5
-    , lsystem
-    , svg-builder
-    , text
-  default-language: Haskell2010
-
-test-suite lsystem-test
+test-suite l-system-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
-      Paths_lsystem
+      Paths_l_system
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
-    , lsystem
+    , l-system
     , svg-builder
     , text
   default-language: Haskell2010
